--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_library(supl
         library.cpp library.h
-        src/Input/Input.cpp src/Input/Input.h
+        src/Input/Instance.cpp src/Input/Instance.h
         src/Input/Sample.cpp src/Input/Sample.h
         deps/rapidcsv.h)
 
