--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,10 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_library(supl
         library.cpp library.h
-        src/Input/Instance.cpp src/Input/Instance.h
-        src/Input/Sample.cpp src/Input/Sample.h
-        src/Learner/Parameter.cpp src/Learner/Parameter.h
+        src/Input/Instance.h
+        src/Input/Sample.h
+        src/Learner/Parameter.h
         src/Cross-validation/CrossValidation.cpp src/Cross-validation/CrossValidation.h
-        deps/rapidcsv.h)
+        deps/rapidcsv.h src/Learner/Learner.cpp src/Learner/Learner.h)
 
 add_executable(main src/main.cpp library.cpp)
