--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,6 @@ add_library(supl
         src/Input/Sample.h
         src/Learner/Parameter.h
         src/Cross-validation/CrossValidation.cpp src/Cross-validation/CrossValidation.h
-        deps/rapidcsv.h src/Learner/Learner.cpp src/Learner/Learner.h)
+        deps/rapidcsv.h src/Learner/Learner.cpp src/Learner/Learner.h src/Loss/LossFunction.cpp src/Loss/LossFunction.h)
 
 add_executable(main src/main.cpp library.cpp)
