--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(supl)
 
 set(CMAKE_CXX_STANDARD 17)
 
+include_directories(include)
+
 add_library(supl
         library.cpp library.h
         src/Input/Instance.h
@@ -10,8 +12,8 @@ add_library(supl
         src/Learner/Parameter.h
         src/Cross-validation/CrossValidation.cpp src/Cross-validation/CrossValidation.h
         deps/rapidcsv.h
-        src/Learner/Learner.cpp src/Learner/Learner.h
-        src/Loss/LossFunction.cpp src/Loss/LossFunction.h
+        src/Learner/Learner.h
+        src/Loss/LossFunction.h
         src/Learner/Classification/KNearestNeighbors/KNearestNeighbors.h)
 
 add_executable(main src/main.cpp library.cpp)
