put into example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 include_directories(include)
 
 add_library(supl
-        library.cpp include/library.h
+        include/library.h
         include/Input/Instance.h
         include/Input/Sample.h
         include/Learner/Parameter.h
@@ -16,4 +16,8 @@ add_library(supl
         include/Loss/LossFunction.h
         include/Learner/Classification/KNearestNeighbors/KNearestNeighbors.h)
 
-add_executable(main src/main.cpp library.cpp)
+set_target_properties(supl PROPERTIES LINKER_LANGUAGE CXX)
+
+add_executable(exampleKNN examples/exampleKNN.cpp)
+
+
